Layout bug fix

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -777,12 +777,6 @@ video {
   height: 350px;
 }
 
-.h-\[stretch\] {
-  height: -webkit-fill-available;
-  height: -moz-available;
-  height: stretch;
-}
-
 .h-auto {
   height: auto;
 }
@@ -798,6 +792,10 @@ video {
 
 .min-h-\[600px\] {
   min-height: 600px;
+}
+
+.min-h-\[420px\] {
+  min-height: 420px;
 }
 
 .w-1\/2 {
@@ -1287,6 +1285,10 @@ video {
   align-items: center;
 }
 
+.items-stretch {
+  align-items: stretch;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -1327,16 +1329,24 @@ video {
   gap: 2rem;
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+.self-start {
+  align-self: flex-start;
+}
+
+.self-stretch {
+  align-self: stretch;
 }
 
 .overflow-hidden {
@@ -1409,10 +1419,6 @@ video {
 
 .border-white\/20 {
   border-color: rgb(255 255 255 / 0.2);
-}
-
-.border-white\/30 {
-  border-color: rgb(255 255 255 / 0.3);
 }
 
 .bg-accent\/10 {
@@ -1568,6 +1574,10 @@ video {
   padding-bottom: 1rem;
 }
 
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
 .pr-6 {
   padding-right: 1.5rem;
 }
@@ -1582,10 +1592,6 @@ video {
 
 .pt-6 {
   padding-top: 1.5rem;
-}
-
-.pl-5 {
-  padding-left: 1.25rem;
 }
 
 .text-center {
@@ -1712,10 +1718,6 @@ video {
 
 .tracking-\[0\.2em\] {
   letter-spacing: 0.2em;
-}
-
-.tracking-\[0\.35em\] {
-  letter-spacing: 0.35em;
 }
 
 .tracking-\[0\.45em\] {
@@ -1906,10 +1908,6 @@ video {
   color: rgb(198 164 90 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-white\/80:hover {
-  color: rgb(255 255 255 / 0.8);
-}
-
 .hover\:opacity-80:hover {
   opacity: 0.8;
 }
@@ -1947,12 +1945,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:text-white\/80 {
-  color: rgb(255 255 255 / 0.8);
-}
-
 .group:hover .group-hover\:text-white\/60 {
   color: rgb(255 255 255 / 0.6);
+}
+
+.group:hover .group-hover\:text-white\/80 {
+  color: rgb(255 255 255 / 0.8);
 }
 
 .group:hover .group-hover\:opacity-0 {
@@ -1966,6 +1964,10 @@ video {
 
   .sm\:h-\[70\%\] {
     height: 70%;
+  }
+
+  .sm\:min-h-\[440px\] {
+    min-height: 440px;
   }
 
   .sm\:w-\[200px\] {
